# youtube-api-pipeline

./: .gitignore  Geeksforgeeks.csv  IN_trending_videos_20250322_170759.csv  LICENSE  README.md  clean_data.py  fetch_dashboard_data.py  fetch_youtube_data.py  pyproject.toml  requirements.txt  transform_load.py
data/: US_trending_videos_20250322_170406.csv  categories.csv  output.csv  trending_videos.csv  videos_found.csv
oracle/: 001_SYS_setup_admin..sql  002_ETLADMIN_setup_users.sql  003_ETLDEV_setup_tables.sql  004_ETLDEV_create_views.sql
youtube_pipeline/: __init__.py  __main__.py  dataextractor.py  datatransformer.py  dbconnect.py  dbsetup.py  pipelineorchestrator.py  rough.json  yp.py
youtube_pipeline/config/: __init__.py
